src/objects/Account_Token__c.object
<CustomObject>
    <description>This Object will help to store the token and 6-digits code to authenticate Customer and create Account Linkage.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Tokens</relationshipLabel>
        <relationshipName>Account_Tokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dexcom_Account__c</fullName>
        <description>This Custom Field will store Dexcom Account GUID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dexcom Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Time__c</fullName>
        <description>This field will determine the validity of the Token or Verification Code submitted by customer.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <description>This custom field will store the token generated to authenticate Customer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Code__c</fullName>
        <description>This custom field will store the verification code generated to authenticate Customer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Verification Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Account Token</label>
    <nameField>
        <displayFormat>Token-{00000}</displayFormat>
        <label>AccountToken</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>